# NER

./: .gitignore  README.md  pyproject.toml
service/: README.md  requirements.txt
service/config/: settings.yaml
service/scripts/: start_server.sh
service/src/ner_service/: main.py  main_mcp.py
service/src/ner_service/api/: routes.py  schemas.py
service/src/ner_service/config/: config.py  logger.py
service/src/ner_service/models/: model_loader.py  predictor.py
service/src/ner_service/processing/: postprocess.py  preprocess.py
service/src/ner_service/utils/: helpers.py
service/tests/: test_api.py  test_predictor.py
train/algo/: ner_global_pointer.py
train/config/: config.yaml
train/utils/: data_process.py  utils.py
