[project]
name = "ner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bert4torch>=0.5.7",
    "fastapi>=0.115.12",
    "fastmcp>=1.0",
    "loguru>=0.7.3",
    "numpy==1.24.2",
    "pillow>=11.2.1",
    "pyyaml==6.0",
    "transformers==4.29.2",
    "uvicorn==0.22.0",
]
